/*
 * $Id: ChangeLog,v 1.779 2011-09-06 01:08:55 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-09-05 21:30:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/c_windows.c
    * Added OS_ISWINXP_OR_LATER() to obtain backward compatibility
      with Harbour 2.x (function borrowed from Harbour sources)
    * Added OS_ISWINVISTA_OR_LATER() borrowed from Harbour sources.
  * ./compile_mingw.bat
    - Removed libxhb.a from gcc compilation commands.
  * source/h_checkbox.prg
  * source/h_button.prg
    * Use OS_ISWINXP_OR_LATER() instead of using OS() to check
      for more Windows versions.
  * source/h_menu.prg
    * Use OS_ISWINVISTA_OR_LATER() instead of using OS() to check
      for more Windows versions.

2011-09-05 20:40:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/h_windows.prg
  * source/h_button.ch
  * source/h_form.ch
  * source/h_checkbox.ch
  * source/h_dialogs.ch
  * source/h_grid.ch
  * source/h_textbox.ch
  * source/h_report.ch
  * source/h_registry.ch
  * source/h_graph.ch
  * source/h_edit.ch
  * source/h_edit_ex.ch
  * source/h_scrsaver.ch
  * source/h_comm.ch
    ! Fixed some harbour compiler warnings when using -w3 switch.

2011-09-05 20:00:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/h_button.ch
    * Changed WIN_OSISWINXPORUPPER() by OS_ISWINXP_OR_LATER() to
      restore xHarbour compatibility.
  * ./compile_mingw.bat
    + Added libxhb.a to gcc compilation commands.

2011-09-05 15:05:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * include/i_button.ch
  * include/i_altsyntax.ch
  * source/h_button.ch
    + Added MULTILINE clause to display long caption in multiple lines.

2011-09-05 12:29 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * samples/oohg/stream/TStreamSocket.prg
    ! Fixed Harbour compilation.
