@@ -1,5 +1,5 @@
 /*
- * $Id: h_combo.prg,v 1.56 2011-09-05 22:59:12 fyurisich Exp $
+ * $Id: h_combo.prg,v 1.57 2011-09-06 02:33:23 fyurisich Exp $
  */
 /*
  * ooHG source code:
@@ -190,7 +190,7 @@ Local ControlHandle , WorkArea , cField, nStyle
              if( HB_IsLogical( SORT )           .AND. SORT,          CBS_SORT,    0 ) + ;
              if( ! displaychange, CBS_DROPDOWNLIST, CBS_DROPDOWN ) + ;
              if ( HB_IsArray( aImage ),  CBS_OWNERDRAWFIXED, 0) + ;
-             if( OS_ISWINXP_OR_LATER() .AND. _OOHG_LastFrame() != "SPLITBOX" , CBS_NOINTEGRALHEIGHT, 0 )
+             if( OSisWinXPorLater() .AND. _OOHG_LastFrame() != "SPLITBOX" , CBS_NOINTEGRALHEIGHT, 0 )
 
    ::SetSplitBoxInfo( Break, GripperText, ::nWidth )
    ControlHandle := InitComboBox( ::ContainerhWnd, 0, ::ContainerCol, ::ContainerRow, ::nWidth, ::nHeight, nStyle, ::lRtl )
