@@ -1,11 +1,22 @@
 /*
- * $Id: ChangeLog,v 1.779 2011-09-06 01:08:55 fyurisich Exp $
+ * $Id: ChangeLog,v 1.780 2011-09-06 02:33:39 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2011-09-05 23:35:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+  * source/c_windows.c
+  * source/h_button.prg
+  * source/h_combo.prg
+  * source/h_checkbox.prg
+  * source/h_menu.prg
+    * OS_ISWINXP_OR_LATER() renamed to OSISWINXPORLATER() to avoid
+      compilation error in xHarbour.
+    * OS_ISWINVISTA_OR_LATER() renamed to OSISWINVISTAORLATER() to
+      avoid compilation error in xHarbour.
 
 2011-09-05 21:30:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_windows.c
